# inference-service

./: .env.example  .gitignore  INFERENCE_SERVICE_INVENTORY.md  README.md  TECHNICAL_CHANGE_LOG.md  nohup.out  pyproject.toml  requirements.txt  run_native.sh  run_with_vips.sh  sonar-project.properties
.github/workflows/: ci.yml  release.yml
.scannerwork/: report-task.txt
.scannerwork/architecture/py/: src-__init___py.udg  src-api-__init___py.udg  src-api-error_handlers_py.udg  src-api-routes-__init___py.udg  src-api-routes-completions_py.udg  src-api-routes-health_py.udg  src-api-routes-models_py.udg  src-core-__init___py.udg  src-core-config_py.udg  src-core-exceptions_py.udg  src-core-logging_py.udg  src-main_py.udg  src-orchestration-__init___py.udg  src-orchestration-context_py.udg  src-orchestration-modes-__init___py.udg  src-orchestration-modes-critique_py.udg  src-orchestration-modes-debate_py.udg  src-orchestration-modes-ensemble_py.udg  src-orchestration-modes-pipeline_py.udg  src-orchestration-modes-single_py.udg  src-orchestration-orchestrator_py.udg  src-orchestration-saga_py.udg  src-providers-__init___py.udg  src-providers-base_py.udg  src-providers-llamacpp_py.udg  src-services-__init___py.udg  src-services-cache_py.udg  src-services-model_manager_py.udg  src-services-queue_manager_py.udg  tests-__init___py.udg  tests-conftest_py.udg  tests-integration-__init___py.udg  tests-integration-conftest_py.udg  tests-integration-test_e2e_py.udg  tests-integration-test_gateway_py.udg  tests-integration-test_load_py.udg  tests-integration-test_orchestration_py.udg  tests-integration-test_streaming_py.udg  tests-unit-__init___py.udg  tests-unit-api-__init___py.udg  (+28 more)
.scannerwork/ir/python/: collected.metadata  collected.typedefs  ir_000000041.ir  ir_000000042.ir  ir_000000043.ir  ir_000000044.ir  ir_000000045.ir  ir_000000046.ir  ir_000000047.ir  ir_000000048.ir  ir_000000049.ir  ir_000000050.ir  ir_000000051.ir  ir_000000052.ir  ir_000000053.ir  ir_000000054.ir  ir_000000055.ir  ir_000000056.ir  ir_000000057.ir  ir_000000058.ir  ir_000000059.ir  ir_000000060.ir  ir_000000061.ir  ir_000000062.ir  ir_000000063.ir  ir_000000064.ir  ir_000000065.ir  ir_000000066.ir  ir_000000067.ir  ir_000000068.ir  ir_000000069.ir  ir_000000070.ir  ir_000000071.ir  ir_000000072.ir  ir_000000073.ir  ir_000000074.ir  ir_000000075.ir  ir_000000076.ir  ir_000000077.ir  ir_000000078.ir  (+169 more)
.scannerwork/ucfg2/python/: all.typedefs  ucfg___init___c___init___py23.ucfg  ucfg___init___e___init___py14.ucfg  ucfg___init___es___init___py6.ucfg  ucfg___init___i___init___py29.ucfg  ucfg___init___n___init___py28.ucfg  ucfg___init___s___init___py11.ucfg  ucfg___init___s___init___py20.ucfg  ucfg___init___s___init___py22.ucfg  ucfg_base_Provider_stream.ucfg  ucfg_base_Provider_unload.ucfg  ucfg_base_ceProvider_load.ucfg  ucfg_base_e_ModelMetadata.ucfg  ucfg_base_er_count_tokens.ucfg  ucfg_base_ferenceProvider.ucfg  ucfg_base_ider_model_info.ucfg  ucfg_base_ovider_generate.ucfg  ucfg_base_ovider_tokenize.ucfg  ucfg_base_vider_is_loaded.ucfg  ucfg_base_viders_base_py2.ucfg  ucfg_cache_Cache__get_lock.ucfg  ucfg_cache_PromptCache_get.ucfg  ucfg_cache_RedisClient_get.ucfg  ucfg_cache__InferenceCache.ucfg  ucfg_cache_acheInvalidator.ucfg  ucfg_cache_andoffCache_get.ucfg  ucfg_cache_cache_Tokenizer.ucfg  ucfg_cache_che_PromptCache.ucfg  ucfg_cache_disClient_setex.ucfg  ucfg_cache_doffCache_clear.ucfg  ucfg_cache_doffCache_store.ucfg  ucfg_cache_e_get_tokenized.ucfg  ucfg_cache_enceCache_clear.ucfg  ucfg_cache_enceCache_store.ucfg  ucfg_cache_enizer_tokenize.ucfg  ucfg_cache_erenceCache_get.ucfg  ucfg_cache_essionCache_get.ucfg  ucfg_cache_he_HandoffCache.ucfg  ucfg_cache_ices_cache_py12.ucfg  ucfg_cache_idate_for_model.ucfg  (+373 more)
config/: .gitkeep  models.yaml  presets.yaml
docker/: .gitkeep  Dockerfile  Dockerfile.cuda  docker-compose.yml
docs/: ARCHITECTURE.md  CONVERSATION_STORE.md  GPU_ALLOCATION.md  HARDWARE_ABSTRACTION.md  MODEL_LIBRARY.md  TECHNICAL_CHANGE_LOG.md  WBS.md
src/: __init__.py  main.py  py.typed
src/api/: __init__.py  error_handlers.py
src/api/routes/: __init__.py  completions.py  health.py  models.py  vision.py
src/core/: __init__.py  config.py  constants.py  exceptions.py  logging.py  text_processing.py
src/observability/: __init__.py  tracing.py
src/orchestration/: __init__.py  context.py  orchestrator.py  saga.py
src/orchestration/modes/: __init__.py  critique.py  debate.py  ensemble.py  pipeline.py  single.py
src/providers/: __init__.py  base.py  deepseek_vl.py  llamacpp.py  moondream.py
src/providers/backends/: __init__.py  device_backend.py  factory.py  siglip_attention_patch.py
src/services/: __init__.py  audit_client.py  cache.py  config_publisher.py  model_manager.py  queue_manager.py
tests/: __init__.py  conftest.py  test_audit_client.py
tests/integration/: README.md  __init__.py  conftest.py  test_completions_queue_h1.py  test_d4_critique.py  test_d4_preset.py  test_deepseek_vl_mps.py  test_e2e.py  test_gateway.py  test_load.py  test_model_connectivity.py  test_orchestration.py  test_streaming.py
tests/unit/: __init__.py  test_main.py  test_queue_config_h1.py  test_queue_manager_lifespan_h1.py
tests/unit/api/: __init__.py  test_error_handlers.py
tests/unit/core/: __init__.py  test_config.py  test_exceptions.py  test_logging.py
tests/unit/orchestration/: __init__.py  test_context.py  test_orchestrator.py  test_saga.py
(+28 files in other folders)
